--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Aryan Verma</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Aryan Verma!</h1>
-				<p>I am a sophomore at IIT Guwahati with interest in machine learning, artificial intelligence and deep learning<a href="/about">Read more</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:aryanverma@iitg.ac.in">email</a></li>
-        		<li><a href="https://github.com/AryanVerma2204">github</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Aryan Verma
+---
+<div class="blurb">
+	<h1>Hi there, I'm Aryan Verma!</h1>
+	<p>I am an artificial intelligence beginner with interest in deep learning and reinforcement learning<a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
