--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Aryan Verma
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Aryan Verma!</h1>
-	<p>I am an artificial intelligence beginner with interest in deep learning and reinforcement learning<a href="/about">Read more about my life...</a></p>
+	<p>I am an artificial intelligence beginner with interest in deep learning and quantum computing. In addition, I am an avid reader of fiction, my favourite is Kingkiller Chronicles (Hope book 3 comes out)<a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
