--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@ layout: default
 title: Aryan Verma
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Aryan Verma!</h1>
-	<p>I am an artificial intelligence beginner with interest in deep learning and quantum computing. Currently a sophomore at Indian Institute of Technolgy Guwahati with major in Electronics and Communication and minor in Computer Science. 
+	<h1>Aryan Verma</h1>
+	<h2>AI beginner|Sophomore undergrad at IIT Guwahati</h2>
+	<p>I am an artificial intelligence beginner with interest in deep learning and quantum computing. Currently a sophomore at Indian Institute of Technology Guwahati with major in Electronics and Communication and minor in Computer Science. 
 	<br><br>
 		I am quite proficient at python programming (adept at Scikit-learn, numpy and pandas; working proficiency in Tensorflow and PyTorch), C++ and Java object oriented programming.
 	<br><br>
-		I would like to contribute to the research and development of artfifcial general intelligence which still seems to be elusive despite much uproar over OpenAI's GPT-2. Currently working on implementing a differentiable neural computer in PyTorch and developing(and deploying) a research assistant using BERT which can answer queries from an upload and from wikipedia too
+		I would like to contribute to the research and development of artifcial general intelligence which still seems to be elusive despite much uproar over OpenAI's GPT-2. Currently working on implementing a differentiable neural computer in PyTorch and developing/deploying a research assistant using BERT which can answer queries from an upload and from wikipedia too
 	</p>
 </div><!-- /.blurb -->
