--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ title: Aryan Verma
 	<br><br>
 		I am quite proficient at python programming (adept at Scikit-learn, numpy and pandas; working proficiency in Tensorflow and PyTorch), C++ and Java object oriented programming.
 	<br><br>
-		I would like to contribute to the research and development of artifcial general intelligence which still seems to be elusive despite much uproar over OpenAI's GPT-2. Currently working on implementing a differentiable neural computer in PyTorch and developing/deploying a research assistant using BERT which can answer queries from an upload and from wikipedia too
+		I would like to contribute to the research and development of artificial general intelligence which still seems to be elusive despite much uproar over OpenAI's GPT-2. Currently working on implementing a differentiable neural computer in PyTorch and developing/deploying a research assistant using BERT which can answer queries from an upload and from wikipedia too
 	</p>
 </div><!-- /.blurb -->
